kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aasm-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aasm
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: aasm
    spec:
      containers:
      - name: aasm
        image: us.gcr.io/appassembly/aasm:latest
        ports:
        - containerPort: 9080
        readinessProbe:
            httpGet:
              path: /_info/health
              port: 9080
        livenessProbe:
            httpGet:
              path: /_info/health
              port: 9080

---

apiVersion: v1
kind: Service
metadata:
  name: aasm-service
  labels:
    name: aasm
spec:
  type: NodePort
  ports:
  - port: 9080
    targetPort: 9080
    name: aasm-port
  selector:
    app: aasm
