kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appy
  labels:
    name: appy
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    name: appy
  type: LoadBalancer
